--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
-<html>
-<head>
-<title></title>
-
-</head>
-<body>
+<!DOCTYPE html>
+<html lang="pt-br">
+	<head>
+		<meta charset="utf-8">
+		<title> NodeProp - Aula - Lincoln</title>
+		<meta name="description" content="Texto">
+		<meta name="key" content="Palavras, chaves, video, aula">
+		<meta name="robots" content="index, follow">
+		<meta name="author" content="Lincoln Ferreira">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
+	</head>
+	<body>
 		
-</body>
+	</body>
 </html>
