--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 <html lang="pt-br">
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title> NodeProp - Aula - Lincoln</title>
 		<meta name="description" content="Texto">
 		<meta name="key" content="Palavras, chaves, video, aula">
 		<meta name="robots" content="index, follow">
 		<meta name="author" content="Lincoln Ferreira">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link rel = "stylesheet"  href = "css/font-awesome.min.css" >
+		<link href='https://fonts.googleapis.com/css?family=Lato:400,300,700' rel='stylesheet' type='text/css'>
+		<link rel="ico" href="img/icon.png">
 	</head>
 	<body>
 		
