--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 		<link rel="ico" href="img/icon.png">
 	</head>
 	<body>
-		
+		<header class="cabecalho">
+			<h1 href="#" class="logo">
+				NodeProp - Aula - Lincoln
+			</h1>
+		</header>
 	</body>
 </html>
