--- a/index.html
+++ b/index.html
@@ -11,13 +11,29 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<link rel = "stylesheet"  href = "css/font-awesome.min.css" >
 		<link href='https://fonts.googleapis.com/css?family=Lato:400,300,700' rel='stylesheet' type='text/css'>
+		<link rel="stylesheet" type="text/js" href="js/jquery-3.0.0.js">
 		<link rel="ico" href="img/icon.png">
 	</head>
 	<body>
 		<header class="cabecalho">
-			<h1 href="#" class="logo">
-				NodeProp - Aula - Lincoln
-			</h1>
+			<a href="#">
+				<h1 class="logo">NodeProp - Aula - Lincoln</h1>
+			</a>	
+			<button class="btn-menu">
+				<i class="fa fa-bars fa-lg"></i>
+			</button>	
+			<nav class="menu">
+				<a class="btn-close">x</a>
+				<ul>
+					<li><a href="#">Home</a></li>
+					<li><a href="#">Clientes</a></li>
+					<li><a href="#">Serviços</a></li>
+					<li><a href="#">Blog</a></li>
+					<li><a href="#">Quem somos</a></li>
+					<li><a href="#">Contato</a></li>
+				</ul>
+			</nav>
+
 		</header>
 	</body>
 </html>
