--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 		<meta name="key" content="Palavras, chaves, video, aula">
 		<meta name="robots" content="index, follow">
 		<meta name="author" content="Lincoln Ferreira">
+		<!--CSS-->
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<link rel = "stylesheet"  href = "css/font-awesome.min.css" >
 		<link href='https://fonts.googleapis.com/css?family=Lato:400,300,700' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" type="text/js" href="js/jquery-3.0.0.js">
+		<!--icone-->
 		<link rel="ico" href="img/icon.png">
 	</head>
 	<body>
@@ -35,5 +36,8 @@
 			</nav>
 
 		</header>
+		<!--JS-->
+		<script src='js/jquery-3.0.0.js' type="text/javascript"></script>
+		<script src='js/rogus.js' type='text/javascript'></script>
 	</body>
 </html>
