--- a/index.html
+++ b/index.html
@@ -34,8 +34,23 @@
 					<li><a href="#">Contato</a></li>
 				</ul>
 			</nav>
-
 		</header>
+		<div class="banner">
+			<div class="title">
+				<h2>OUSE INOVAR</h2>
+				<h3>Criamos experiências e estabelecemos ações estratégias que conectam marcas e consumidores!</h3>			
+			</div>
+			<div class="buttons">
+				<button class="btn-cadastrar">
+					Cadastrar
+					<i class="fa fa-arrow-circle-right"></i>
+				</button>
+				<button class="btn-sobre">
+					Sobre
+					<i class="fa fa-question-circle"></i>
+				</button>
+			</div>
+		</div>
 		<!--JS-->
 		<script src='js/jquery-3.0.0.js' type="text/javascript"></script>
 		<script src='js/rogus.js' type='text/javascript'></script>
