--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 				<i class="fa fa-bars fa-lg"></i>
 			</button>	
 			<nav class="menu">
-				<a class="btn-close">x</a>
+				<a class="btn-close">
+					<i class="fa fa-times"></i>
+				</a>
 				<ul>
 					<li><a href="#">Home</a></li>
 					<li><a href="#">Clientes</a></li>
@@ -51,6 +53,33 @@
 				</button>
 			</div>
 		</div>
+		<main class="servicos">
+			<article class="servico">
+				<a href="#"><img src="img/criacoes.jpg" alt="Campanhas publicitárias"></a>
+				<div class="inner">
+					<a href="#">Campanhas Publiciatárias</a>
+					<h4>Impressos, VTs e Jingles</h4>
+					<p>Aqui é Body Builder Ipsum PORRA! AHHHHHHHHHHHHHHHHHHHHHH..., porra! Vamo monstro! Ó o homem ali porra!, é 13 porra! É nóis caraio é trapezera buscando caraio! Boraaa, Hora do Show Porra. Bora caralho, você quer ver essa porra velho.</p>
+				</div>				
+			</article>
+			<article class="servico">
+				<a href="#"><img src="img/md.jpg" alt="Marketing Digital"></a>
+				<div class="inner">
+					<a href="#">Marketing Digital</a>
+					<h4>Impressos, VTs e Jingles</h4>
+					<p>Aqui é Body Builder Ipsum PORRA! Vem porra! Boraaa, Hora do Show Porra. Negativa Bambam negativa. É verão o ano todo vem cumpadi. Eita porra!, tá saindo da jaula o monstro! Vai subir árvore é o caralho porra!</p>
+				</div>				
+			</article>
+			<article class="servico">
+				<a href="#"><img src="img/cs.jpg" alt="Criação de Sites"></a>
+				<div class="inner">
+					<a href="#">Sites Administráveis</a>
+					<h4>Impressos, VTs e Jingles</h4>
+					<p>Aqui é Body Builder Ipsum PORRA! Vem porra! Boraaa, Hora do Show Porra. Negativa Bambam negativa. É verão o ano todo vem cumpadi. Eita porra!, tá saindo da jaula o monstro! Vai subir árvore é o caralho porra!</p>
+				</div>				
+			</article>
+			
+		</main>
 		<!--JS-->
 		<script src='js/jquery-3.0.0.js' type="text/javascript"></script>
 		<script src='js/rogus.js' type='text/javascript'></script>
