--- a/index.html
+++ b/index.html
@@ -77,9 +77,16 @@
 					<h4>Impressos, VTs e Jingles</h4>
 					<p>Aqui é Body Builder Ipsum PORRA! Vem porra! Boraaa, Hora do Show Porra. Negativa Bambam negativa. É verão o ano todo vem cumpadi. Eita porra!, tá saindo da jaula o monstro! Vai subir árvore é o caralho porra!</p>
 				</div>				
-			</article>
-			
+			</article>			
 		</main>
+		<section class="newsletter">
+			<h2>Inscreva-se agora!</h2>
+			<h3>Receba novidades, dicas e muito mais</h3>
+			<form>
+				<input type="email" name="email" placeholder="Seu email">
+				<button>Cadastrar</button>
+			</form>
+		</section>
 		<!--JS-->
 		<script src='js/jquery-3.0.0.js' type="text/javascript"></script>
 		<script src='js/rogus.js' type='text/javascript'></script>
