--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 		<link rel="ico" href="img/icon.png">
 	</head>
 	<body>
-		<header class="cabecalho">
+		<header class="container">
 			<a href="#">
 				<h1 class="logo">NodeProp - Aula - Lincoln</h1>
 			</a>	
-			<button class="btn-menu">
+			<button class="btn-menu bg-gradiente">
 				<i class="fa fa-bars fa-lg"></i>
 			</button>	
 			<nav class="menu">
@@ -37,23 +37,23 @@
 				</ul>
 			</nav>
 		</header>
-		<div class="banner">
+		<div class="container banner">
 			<div class="title">
 				<h2>OUSE INOVAR</h2>
 				<h3>Criamos experiências e estabelecemos ações estratégias que conectam marcas e consumidores!</h3>			
 			</div>
 			<div class="buttons">
-				<button class="btn-cadastrar">
+				<button class="btn btn-cadastrar">
 					Cadastrar
 					<i class="fa fa-arrow-circle-right"></i>
 				</button>
-				<button class="btn-sobre">
+				<button class="btn bg-black btn-sobre">
 					Sobre
 					<i class="fa fa-question-circle"></i>
 				</button>
 			</div>
 		</div>
-		<main class="servicos">
+		<main class="container">
 			<article class="servico">
 				<a href="#"><img src="img/criacoes.jpg" alt="Campanhas publicitárias"></a>
 				<div class="inner">
@@ -79,7 +79,7 @@
 				</div>				
 			</article>			
 		</main>
-		<section class="newsletter">
+		<section class="container newsletter">
 			<h2>Inscreva-se agora!</h2>
 			<h3>Receba novidades, dicas e muito mais</h3>
 			<form>
@@ -87,7 +87,20 @@
 				<button>Cadastrar</button>
 			</form>
 		</section>
-		<!--JS-->
+		<!--Rodapé-->
+		<footer class="container bg-gradiente">
+			<div class="social-icons">
+				<a href="#"><i class="fa fa-facebook"></i></a>
+				<a href="#"><i class="fa fa-twitter"></i></a>
+				<a href="#"><i class="fa fa-google"></i></a>
+				<a href="#"><i class="fa fa-instagram"></i></a>
+				<a href="#"><i class="fa fa-envelope"></i></a>
+			</div>
+			<p class="copyright">
+				Copyright c Lincoln 2016. Todos os direitos reservados.
+			</p>		
+		</footer>
+		<!--jQuery-->
 		<script src='js/jquery-3.0.0.js' type="text/javascript"></script>
 		<script src='js/rogus.js' type='text/javascript'></script>
 	</body>
