iniciando da aula 13

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				<h3>Criamos experiências e estabelecemos ações estratégias que conectam marcas e consumidores!</h3>			
 			</div>
 			<div class="buttons">
-				<button class="btn btn-cadastrar">
+				<button class="btn btn-cadastrar bg-white">
 					Cadastrar
 					<i class="fa fa-arrow-circle-right"></i>
 				</button>
@@ -54,7 +54,7 @@
 			</div>
 		</div>
 		<main class="container">
-			<article class="servico">
+			<article class="servico bg-white">
 				<a href="#"><img src="img/criacoes.jpg" alt="Campanhas publicitárias"></a>
 				<div class="inner">
 					<a href="#">Campanhas Publiciatárias</a>
@@ -62,29 +62,30 @@
 					<p>Mussum Ipsum, cacilds vidis litro abertis. in elementis mé pra quem é amistosis quis leo. Todo mundo vê os porris que eu tomo, mas ninguém vê os tombis que eu levo! Admodum accumsan disputationi eu sit. Vide electram sadipscing et per. Atirei o pau no gatis, per gatis num morreus.</p>
 				</div>				
 			</article>
-			<article class="servico">
+			<article class="servico bg-white">
 				<a href="#"><img src="img/md.jpg" alt="Marketing Digital"></a>
 				<div class="inner">
 					<a href="#">Marketing Digital</a>
-					<h4>Impressos, VTs e Jingles</h4>
+					<h4>Administração de redes sociais</h4>
 					<p>Mussum Ipsum, cacilds vidis litro abertis. in elementis mé pra quem é amistosis quis leo. Todo mundo vê os porris que eu tomo, mas ninguém vê os tombis que eu levo! Admodum accumsan disputationi eu sit. Vide electram sadipscing et per. Atirei o pau no gatis, per gatis num morreus.</p>
 				</div>				
 			</article>
-			<article class="servico">
+			<article class="servico bg-white">
 				<a href="#"><img src="img/cs.jpg" alt="Criação de Sites"></a>
 				<div class="inner">
-					<a href="#">Sites Administráveis</a>
-					<h4>Impressos, VTs e Jingles</h4>
+					<a href="#">Criação de Sites</a>
+					<h4>Sites Administráveis</h4>
 					<p>Mussum Ipsum, cacilds vidis litro abertis. in elementis mé pra quem é amistosis quis leo. Todo mundo vê os porris que eu tomo, mas ninguém vê os tombis que eu levo! Admodum accumsan disputationi eu sit. Vide electram sadipscing et per. Atirei o pau no gatis, per gatis num morreus.</p>
 				</div>				
 			</article>			
 		</main>
-		<section class="container newsletter">
+		<!--newletter-->
+		<section class="container newsletter bg-black">
 			<h2>Inscreva-se agora!</h2>
 			<h3>Receba novidades, dicas e muito mais</h3>
 			<form>
-				<input type="email" name="email" placeholder="Seu email">
-				<button>Cadastrar</button>
+				<input class="bg-black" type="email" name="email" placeholder="Seu email">
+				<button class="bg-white">Cadastrar</button>
 			</form>
 		</section>
 		<!--Rodapé-->
